--- a/stacks/reinforcement_learning/rl_env/mainpage.dox
+++ b/stacks/reinforcement_learning/rl_env/mainpage.dox
@@ -10,7 +10,7 @@ of these environments:
 
 
  Call env --env type [options]
-Env types: taxi tworooms fuellow fuelhigh mcar cartpole car2to7 stocks
+Env types: taxi tworooms fourrooms energy fuelworld mcar cartpole car2to7 car7to2 carrandom stocks
 
  Options:
 --seed value (integer seed for random number generator)
@@ -18,6 +18,7 @@ Env types: taxi tworooms fuellow fuelhigh mcar cartpole car2to7 stocks
 --stochastic (stochastic version of domain)
 --delay value (# steps of action delay (for mcar and tworooms)
 --lag (turn on brake lag for car driving domain)
+--highvar (have variation fuel costs in Fuel World)
 --nsectors value (# sectors for stocks domain)
 --nstocks value (# stocks for stocks domain)
 --prints (turn on debug printing of actions/rewards)
